# CC_AutoCut_Gate

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: local-upload-agent-desktop-release.yml  local-upload-agent-desktop.yml
apps/local-upload-agent/: README.md  package.json
apps/local-upload-agent/src/: index.html  main.js  styles.css
apps/local-upload-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/local-upload-agent/src-tauri/icons/: icon.icns
apps/local-upload-agent/src-tauri/src/: main.rs
scripts/: local-upload-agent-desktop-build-debug.sh  local-upload-agent-desktop-build.sh  local-upload-agent-desktop-check.sh  local-upload-agent-desktop-configure-release.mjs  local-upload-agent-desktop-dev.sh  local-upload-agent-desktop-generate-update-manifest.mjs
